--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cross-env": "^5.1.1",
     "mocha": "^4.0.1",
     "mocha-lcov-reporter": "^1.3.0",
+    "mongoose": "^4.13.1",
     "nyc": "^11.2.1",
     "pocket-registry": "^1.1.0",
     "shelljs": "^0.7.8",
@@ -41,7 +42,6 @@
   },
   "dependencies": {
     "crypto": "^1.0.1",
-    "debug": "^3.1.0",
-    "mongoose": "^4.13.1"
+    "debug": "^3.1.0"
   }
 }
