--- a/package.json
+++ b/package.json
@@ -25,20 +25,19 @@
     "node": ">= 6"
   },
   "devDependencies": {
-    "@transomjs/transom-mongoose": "^1.0.2",
+    "@transomjs/transom-mongoose": "^1.7.0-0",
     "chai": "^4.1.2",
     "coveralls": "^3.0.0",
     "cross-env": "^5.1.1",
     "mocha": "^4.0.1",
     "mocha-lcov-reporter": "^1.3.0",
-    "mongoose": "^4.13.1",
     "nyc": "^11.2.1",
     "pocket-registry": "^1.1.0",
     "shelljs": "^0.7.8",
     "sinon": "^4.1.1"
   },
   "peerDependencies": {
-    "@transomjs/transom-mongoose": "^1.0.2"
+    "@transomjs/transom-mongoose": "^1.7.0-0"
   },
   "dependencies": {
     "crypto": "^1.0.1",
