--- a/package.json
+++ b/package.json
@@ -25,21 +25,22 @@
     "node": ">= 6"
   },
   "devDependencies": {
-    "@transomjs/transom-mongoose": "^1.7.2",
+    "@transomjs/transom-mongoose": "^1.8.0-0",
     "chai": "^4.1.2",
     "coveralls": "^3.0.2",
     "cross-env": "^5.2.0",
-    "mocha": "^4.1.0",
+    "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
-    "nyc": "^11.9.0",
-    "pocket-registry": "^1.1.0",
-    "shelljs": "^0.7.8",
-    "sinon": "^4.5.0"
+    "np": "^3.0.4",
+    "nyc": "^13.0.1",
+    "pocket-registry": "^1.1.1",
+    "shelljs": "^0.8.2",
+    "sinon": "^6.3.3"
   },
   "peerDependencies": {
-    "@transomjs/transom-mongoose": "^1.7.0-0"
+    "@transomjs/transom-mongoose": "^1.8.0-0"
   },
   "dependencies": {
-    "debug": "^3.1.0"
+    "debug": "^4.0.1"
   }
 }
