--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
     "node": ">= 6"
   },
   "devDependencies": {
-    "@transomjs/transom-mongoose": "^1.8.0-0",
-    "chai": "^4.1.2",
+    "@transomjs/transom-mongoose": "^1.8.0",
+    "chai": "^4.2.0",
     "coveralls": "^3.0.2",
     "cross-env": "^5.2.0",
     "mocha": "^5.2.0",
     "mocha-lcov-reporter": "^1.3.0",
     "np": "^3.0.4",
-    "nyc": "^13.0.1",
+    "nyc": "^13.1.0",
     "pocket-registry": "^1.1.1",
     "shelljs": "^0.8.2",
     "sinon": "^6.3.3"
