--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@transomjs/transom-mongoose-nonce",
-  "version": "1.2.0-0",
+  "version": "1.2.0",
   "description": "Add Nonce functions to a Transom REST API",
   "main": "index.js",
   "scripts": {
